--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <script>
         var clicks = 0;
         var messages = [
-            "Useless Button",
+            "Hi, I'm a Useless Button",
             "Stop clicking, it's useless",
             "Pls stop already",
             "You are so persistent",
