--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </head>
     <body>
         <div id = "header">
-            <h1>TLL - Math, Sunday 2pm Class</h1>
+            <h1>TLL - English, Sunday 4pm Class</h1>
         </div>
         <div id = "first-para">
             <p>Hello, thank you for visiting my website that I designed in like 5 - 10 minutes. This is just webpage with a useless button.</p>
